# itelma-backend

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: __init__.py  cli.py
app/analysis/: __init__.py  main.py  pipeline.py  predictions.py  verdict.py
app/api/: __init__.py  util.py
app/api/route/: __init__.py  exceptions.py  util.py
app/api/route/dependencies/: __init__.py  database.py
app/api/route/middlewares/: __init__.py
app/api/route/v1/: __init__.py  emulation.py  examination.py  patient.py
app/api/schema/: __init__.py  emulation.py
app/core/: __init__.py  config.py  constants.py  exceptions.py  paths.py
app/model/: __init__.py  analysis.py  emulation.py  examination.py  misc.py  patient.py
app/service/: __init__.py  emulation.py  examination.py  patient.py
app/service/emulation/: __init__.py  service.py  session.py
app/service/model/: __init__.py  emulation.py
app/storage/: __init__.py  database.py  examination.py  lifespan.py  locking.py  patient.py  util.py
app/util/: __init__.py  lock.py  queue.py
deploy/: .env.example  Dockerfile  compose.dev.yml  compose.yml
resources/: config.yml
resources/ml/: predictor.pt
